routing-1/deployment-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: istio-explorations
  name: routing-deployment-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: route-pod
      version: v1
  template:
    metadata:
      labels:
        app: route-pod
        version: v1
    spec:
      containers:
      - name: routing
        image: ratulb/routing:v1
