routing-1/virtual-service-1.yaml
#Istio vitual service example. Would delegate request to routing:v1 pod.
#This project should be tried first. Running with routing-2 - would delegate request to routing:v2 pods too.
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-routing-demo
  namespace: istio-explorations
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            exact: /service1
        - uri:
            exact: /service2
        - uri:
            exact: /
        - uri:
            prefix: /
      route:
        - destination:
            host: routing-demo
